syntax = "proto3";

package users;

option go_package = "auth/pkg/grpc/auth";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

// Register
message RegisterRequest {
  string Email = 1;
  string Password = 2;
}

message RegisterResponse {
  string Access = 1;
}

// Login
message LoginRequest {
  string Email = 1;
  string Password = 2;
}

message LoginResponse {
  string Jwt_token = 1;
}